# backend/apps/users/views.py
@@ -1,3 +1,4 @@
+# apps/users/views.py
 from drf_spectacular.utils import OpenApiResponse, extend_schema
 from rest_framework.parsers import JSONParser
 from rest_framework_simplejwt.views import TokenViewBase
@@ -6,23 +7,29 @@ from apps.users.serializers import EmailTokenObtainPairSerializer
 
 
 class EmailTokenObtainPairView(TokenViewBase):
-    """View JWT customizada para usar email."""
+    """
+    Gerenciamento de autenticação via JWT com e-mail.
+    """
 
-    # Bloqueia a entrada de lixo (apenas JSON)
     parser_classes = [JSONParser]
     serializer_class = EmailTokenObtainPairSerializer
 
     @extend_schema(
         tags=["auth"],
         summary="Obter Par de Tokens",
-        description="Autentica o utilizador via email e devolve os tokens Access e "
-        "Refresh.",
+        description="Recebe as credenciais (e-mail/senha) e retorna um par de tokens "
+        "JWT (Access e Refresh).",
         responses={
-            200: OpenApiResponse(description="Login com sucesso. Tokens gerados."),
+            # Ao passar o serializer aqui, o Swagger gera o schema
+            # 'AuthTokenCreate200Response' com os campos 'access' e 'refresh'.
+            # Sem isso, o Orval assume 'void'.
+            200: EmailTokenObtainPairSerializer,
             400: OpenApiResponse(
-                description="Erro de validação. Estrutura JSON incorreta."
+                description="Requisição inválida. Verifique o formato do JSON."
             ),
-            401: OpenApiResponse(description="Não autorizado. Credenciais inválidas."),
+            401: OpenApiResponse(
+                description="Credenciais inválidas ou conta desativada."
+            ),
         },
     )
     def post(self, request, *args, **kwargs):
